# validate-jsonl

./: README.md  citations.json  pyproject.toml
validate_jsonl/: validate.py
